# Passy

./: .gitignore  CLI.py  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  test.py
Documents/: Documenation.rst  Specification.rst
docs/: Changelog.rst  Documenation.rst  Index.rst  Install.rst  Specification.rst  conf.py
docs/reference/: requierments.txt
passy/: __init__.py  otp.py  passy.py
pytest/: Test.py  test_DunMethods.py  test_DunderMethods.py  test_add.py  test_check.py  test_load.py  test_save.py
pytest/TestFiles/: test1.json  test2.json
src/: Passy.py
src/internal/: AccountMigration.py  Encrypt.py  Encryption.py
test/: test_DunMethods.py  test_add.py  test_check.py  test_load.py  test_save.py
test/Test_Data/: setup.py  test.txt  test1.json  test2.json
tests/: test_2fa.py  test_auth.py
