[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "passy"
version = "0.1.0"
description = "Logins made simple"
license = {file = "LICENSE"}
authors = [
    {name = "Ben Brady", email = "benbradybusiness@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "passlib[argon2]~=1.7.4",
    "pyotp~=2.8.0",
    "typing_extensions>=4.5.0"
]

[project.urls]
Source = "https://github.com/Ben-Brady/passy"
